--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Hyunsuk(Cirl) Lee # your name (or website title) here
+logo: "/images/ProfilePicture_이현석.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Full Stack Developer
   <br><br>
-  Second description 
+  Dynamic, global-oriented IT professional with track record of successes in college and working in IT & Manufacturing industry, seeking to contribute to the state-of-the-art system and large scale development in terms of Software Design.
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/hyunsuk-lee-b54416111/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
